@@ -1,7 +1,11 @@
+2009-03-15  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.texinfo (Returning): New description for missing debug info.
+
 2009-03-14  Pedro Alves  <pedro@codesourcery.com>
 
 	* gdb.texinfo (Remote Configuration): Document query-attached.
-        (General Query Packets): Document qAttached.
+	(General Query Packets): Document qAttached.
 
 2009-03-05  Pedro Alves  <pedro@codesourcery.com>
 
@@ -26,8 +30,8 @@
 
 2009-02-14  Vladimir Prus  <vladimir@codesourcery.com>
 
-        * observer.texi: Add parameter 'print_frame' to normal_stop
-        observer.
+	* observer.texi: Add parameter 'print_frame' to normal_stop
+	observer.
 
 2009-02-07  Eli Zaretskii  <eliz@gnu.org>
 
